@@ -473,6 +473,9 @@ class Groups_Shortcodes {
 	 * @return string
 	 */
 	public static function groups_join( $atts, $content = null ) {
+
+		global $groups_join_data_init;
+
 		$nonce_action = 'groups_action';
 		$nonce        = 'nonce_join';
 		$output       = '';
@@ -547,6 +550,7 @@ class Groups_Shortcodes {
 		}
 		if ( $current_group ) {
 			if ( $user_id = get_current_user_id() ) {
+				$joined        = false;
 				$submitted     = false;
 				$invalid_nonce = false;
 				if ( !empty( $_POST['groups_action'] ) && $_POST['groups_action'] == 'join' ) {
@@ -558,31 +562,57 @@ class Groups_Shortcodes {
 				}
 				if ( $submitted && !$invalid_nonce ) {
 					// add user to group
-					if ( isset( $_POST['group_id'] ) ) {
-						$join_group = Groups_Group::read( sanitize_text_field( $_POST['group_id'] ) );
-						Groups_User_Group::create(
-							array(
-								'group_id' => $join_group->group_id,
-								'user_id' => $user_id
-							)
-						);
-						/**
-						 * Whether to redirect after submit and successful addition to group.
-						 *
-						 * @since 3.6.0
-						 *
-						 * @param boolean|string $redirect true to redirect to current ULR, string to redirect to specific URL, false not to redirect
-						 * @param array $atts shortcode attributes
-						 * @param array $options evaluated shortcode options
-						 *
-						 * @return boolean|string
-						 */
-						if ( apply_filters( 'groups_join_submit_redirect', $redirect, $atts, $options ) !== false ) {
-							self::maybe_redirect( $redirect );
+					if ( isset( $_POST['groups-join-data'] ) ) {
+						$hash = trim( sanitize_text_field( $_POST['groups-join-data'] ) );
+						$groups_join_data = get_user_meta( $user_id, 'groups-join-data', true );
+						if ( is_array( $groups_join_data ) && isset( $groups_join_data[$hash] ) ) {
+							if ( isset( $groups_join_data[$hash]['group_id'] ) ) {
+								$group_id = $groups_join_data[$hash]['group_id'];
+								$joined = Groups_User_Group::create(
+									array(
+										'group_id' => $group_id,
+										'user_id' => $user_id
+									)
+								);
+								if ( $joined ) {
+									/**
+									 * Whether to redirect after submit and successful addition to group.
+									 *
+									 * @since 3.6.0
+									 *
+									 * @param boolean|string $redirect true to redirect to current ULR, string to redirect to specific URL, false not to redirect
+									 * @param array $atts shortcode attributes
+									 * @param array $options evaluated shortcode options
+									 *
+									 * @return boolean|string
+									 */
+									if ( apply_filters( 'groups_join_submit_redirect', $redirect, $atts, $options ) !== false ) {
+										self::maybe_redirect( $redirect );
+									}
+								}
+							}
 						}
 					}
 				}
 				if ( !Groups_User::user_is_member( $user_id, $current_group->group_id ) ) {
+					if ( !isset( $groups_join_data_init ) ) {
+						$groups_join_data_init = true;
+						delete_user_meta( $user_id, 'groups-join-data' );
+					}
+					$data = array(
+						'user_id'  => $user_id,
+						'group_id' => $current_group->group_id,
+						'time'     => time(),
+						'salt'     => rand( 0, PHP_INT_MAX )
+					);
+					$hash = hash( 'sha256', json_encode( $data ) );
+					$groups_join_data = get_user_meta( $user_id, 'groups-join-data', true );
+					if ( !is_array( $groups_join_data ) ) {
+						$groups_join_data = array();
+					}
+					$groups_join_data[$hash] = $data;
+					update_user_meta( $user_id, 'groups-join-data', $groups_join_data );
+
 					$submit_text = sprintf( $options['submit_text'], wp_filter_nohtml_kses( $current_group->name ) );
 					$output .= sprintf(
 						'<div class="groups-join%s">',
@@ -590,7 +620,7 @@ class Groups_Shortcodes {
 					);
 					$output .= '<form action="#" method="post">';
 					$output .= '<input type="hidden" name="groups_action" value="join" />';
-					$output .= '<input type="hidden" name="group_id" value="' . esc_attr( $current_group->group_id ) . '" />';
+					$output .= '<input type="hidden" name="groups-join-data" value="' . esc_attr( $hash ) . '" />';
 					$output .= sprintf(
 						'<input class="groups-join-submit%s" type="submit" value="%s" />',
 						strlen( $submit_class ) > 0 ? ' ' . esc_attr( $submit_class ) : '',
@@ -600,7 +630,7 @@ class Groups_Shortcodes {
 					$output .= '</form>';
 					$output .= '</div>';
 				} else if ( $display_message ) {
-					if ( $submitted && !$invalid_nonce && isset( $join_group ) && $join_group->group_id === $current_group->group_id ) {
+					if ( $joined ) {
 						$output .= '<div class="groups-join joined">';
 						/* translators: group name */
 						$output .= sprintf( esc_html__( 'You have joined the %s group.', 'groups' ), wp_filter_nohtml_kses( $join_group->name ) );
@@ -635,6 +665,9 @@ class Groups_Shortcodes {
 	 * @return string
 	 */
 	public static function groups_leave( $atts, $content = null ) {
+
+		global $groups_leave_data_init;
+
 		$nonce_action = 'groups_action';
 		$nonce        = 'nonce_leave';
 		$output       = '';
@@ -697,6 +730,7 @@ class Groups_Shortcodes {
 		}
 		if ( $current_group ) {
 			if ( $user_id = get_current_user_id() ) {
+				$left          = false;
 				$submitted     = false;
 				$invalid_nonce = false;
 				if ( !empty( $_POST['groups_action'] ) && $_POST['groups_action'] == 'leave' ) { // phpcs:ignore WordPress.Security.ValidatedSanitizedInput.InputNotSanitized
@@ -708,26 +742,52 @@ class Groups_Shortcodes {
 				}
 				if ( $submitted && !$invalid_nonce ) {
 					// remove user from group
-					if ( isset( $_POST['group_id'] ) ) {
-						$leave_group = Groups_Group::read( sanitize_text_field( $_POST['group_id'] ) );
-						Groups_User_Group::delete( $user_id, $leave_group->group_id );
-						/**
-						 * Whether to redirect after acceptedsubmit and successful removal from group.
-						 *
-						 * @since 3.6.0
-						 *
-						 * @param boolean|string $redirect true to redirect to current ULR, string to redirect to specific URL, false not to redirect
-						 * @param array $atts shortcode attributes
-						 * @param array $options evaluated shortcode options
-						 *
-						 * @return boolean|string
-						 */
-						if ( apply_filters( 'groups_leave_submit_redirect', $redirect, $atts, $options ) !== false ) {
-							self::maybe_redirect( $redirect );
+					if ( isset( $_POST['groups-leave-data'] ) ) {
+						$hash = trim( sanitize_text_field( $_POST['groups-leave-data'] ) );
+						$groups_leave_data = get_user_meta( $user_id, 'groups-leave-data', true );
+						if ( is_array( $groups_leave_data ) && isset( $groups_leave_data[$hash] ) ) {
+							if ( isset( $groups_leave_data[$hash]['group_id'] ) ) {
+								$group_id = $groups_leave_data[$hash]['group_id'];
+								$left = Groups_User_Group::delete( $user_id, $group_id );
+								if ( $left ) {
+									/**
+									 * Whether to redirect after acceptedsubmit and successful removal from group.
+									 *
+									 * @since 3.6.0
+									 *
+									 * @param boolean|string $redirect true to redirect to current ULR, string to redirect to specific URL, false not to redirect
+									 * @param array $atts shortcode attributes
+									 * @param array $options evaluated shortcode options
+									 *
+									 * @return boolean|string
+									 */
+									if ( apply_filters( 'groups_leave_submit_redirect', $redirect, $atts, $options ) !== false ) {
+										self::maybe_redirect( $redirect );
+									}
+								}
+							}
 						}
 					}
 				}
 				if ( Groups_User::user_is_member( $user_id, $current_group->group_id ) ) {
+					if ( !isset( $groups_leave_data_init ) ) {
+						$groups_leave_data_init = true;
+						delete_user_meta( $user_id, 'groups-leave-data' );
+					}
+					$data = array(
+						'user_id'  => $user_id,
+						'group_id' => $current_group->group_id,
+						'time'     => time(),
+						'salt'     => rand( 0, PHP_INT_MAX )
+					);
+					$hash = hash( 'sha256', json_encode( $data ) );
+					$groups_leave_data = get_user_meta( $user_id, 'groups-leave-data', true );
+					if ( !is_array( $groups_leave_data ) ) {
+						$groups_leave_data = array();
+					}
+					$groups_leave_data[$hash] = $data;
+					update_user_meta( $user_id, 'groups-leave-data', $groups_leave_data );
+
 					$submit_text = sprintf( $options['submit_text'], wp_filter_nohtml_kses( $current_group->name ) );
 					$output .= sprintf(
 						'<div class="groups-leave%s">',
@@ -735,7 +795,7 @@ class Groups_Shortcodes {
 					);
 					$output .= '<form action="#" method="post">';
 					$output .= '<input type="hidden" name="groups_action" value="leave" />';
-					$output .= '<input type="hidden" name="group_id" value="' . esc_attr( $current_group->group_id ) . '" />';
+					$output .= '<input type="hidden" name="groups-leave-data" value="' . esc_attr( $hash ) . '" />';
 					$output .= sprintf(
 						'<input class="groups-leave-submit%s" type="submit" value="%s" />',
 						strlen( $submit_class ) > 0 ? ' ' . esc_attr( $submit_class ) : '',
@@ -745,7 +805,7 @@ class Groups_Shortcodes {
 					$output .= '</form>';
 					$output .= '</div>';
 				} else if ( $display_message ) {
-					if ( $submitted && !$invalid_nonce && isset( $leave_group ) && $leave_group->group_id === $current_group->group_id ) {
+					if ( $left ) {
 						$output .= '<div class="groups-join left">';
 						/* translators: group name */
 						$output .= sprintf( esc_html__( 'You have left the %s group.', 'groups' ), wp_filter_nohtml_kses( $leave_group->name ) );
